fix:z-index 수정

--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -5,6 +5,7 @@
 .page__footer {
   @include clearfix;
   float: left;
+  z-index: -50;
   margin-left: 0;
   margin-right: 0;
   width: 100%;
